# crystal

server/: .gitignore  CMakeLists.txt  README.md  build.sh  config.txt  earth.sql  server.sh
server/include/: camera.h  codec.h  config.h  md5.h  mysql.h  tcp.h  udp.h
server/src/: camera.cpp  codec.cpp  config.cpp  main.cpp  md5.cpp  mysql.cpp  tcp.cpp  udp.cpp
